--- a/ROOT/WEB-INF/web.xml
+++ b/ROOT/WEB-INF/web.xml
@@ -26,5 +26,8 @@
   <description>
      Welcome to Tomcat
   </description>
-
+  <error-page>
+      <error-code>404</error-code>
+      <location>/404.html</location>
+  </error-page>
 </web-app>
