--- a/ROOT/WEB-INF/web.xml
+++ b/ROOT/WEB-INF/web.xml
@@ -30,4 +30,12 @@
       <error-code>404</error-code>
       <location>/404.html</location>
   </error-page>
+  <servlet>
+      <servlet-name>electricity_bill_offset</servlet-name>
+      <jsp-file>electricity_bill_offset.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>electricity_bill_offset</servlet-name>
+      <url-pattern>/electricity_bill_offset.html</url-pattern>
+  </servlet-mapping>
 </web-app>
