--- a/ROOT/WEB-INF/web.xml
+++ b/ROOT/WEB-INF/web.xml
@@ -126,4 +126,12 @@
       <servlet-name>made_in_usa</servlet-name>
       <url-pattern>/made_in_usa.html</url-pattern>
   </servlet-mapping>
+  <servlet>
+      <servlet-name>premium_solar_and_battery_installer</servlet-name>
+      <jsp-file>/premium_solar.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>premium_solar_and_battery_installer</servlet-name>
+      <url-pattern>/premium_solar_and_battery_installer.html</url-pattern>
+  </servlet-mapping>
 </web-app>
